--- a/css/styles.css
+++ b/css/styles.css
@@ -4,7 +4,18 @@ body {
   background-color: white;
 }
 
+.container {
+  max-width: 1158px;
+  padding-left: 15px;
+  padding-right: 15px;
+  margin: 0 auto;
+}
+
 .visually-hidden {
+  width: 1px;
+  left: -10000px;
+  top: auto;
+  height: 1px;
   overflow: hidden;
 }
 
@@ -36,6 +47,19 @@ body {
 
 /* header */
 
+.header-section {
+  display: flex;
+  justify-content: space-between;
+  padding: 0;
+  margin-top: 24px;
+  margin-bottom: 24px;
+}
+
+.nav-list {
+  display: flex;
+  align-items: center;
+}
+
 .logo {
   font-family: 'Raleway', sans-serif;
   color: rgba(77, 90, 229, 1);
@@ -45,6 +69,7 @@ body {
   letter-spacing: 0.03em;
   text-decoration: none;
   text-transform: uppercase;
+  margin-right: 76px;
 }
 
 .brand-logo {
@@ -52,6 +77,8 @@ body {
 }
 
 .header-nav {
+  display: flex;
+  gap: 40px;
   list-style-type: none;
 }
 
@@ -71,6 +98,9 @@ body {
 }
 
 .header-address {
+  display: flex;
+  align-items: center;
+  gap: 40px;
   list-style-type: none;
 }
 
@@ -95,10 +125,14 @@ body {
 /* hero-section */
 
 .hero-section {
+  display: flex;
+  justify-content: center;
   background-color: rgba(46, 47, 66, 1);
+  padding-top: 188px;
+  padding-bottom: 188px;
 }
 
-.hero-section-title {
+.hero-title {
   color: rgba(255, 255, 255, 1);
   font-size: 56px;
   font-weight: 700;
@@ -106,9 +140,12 @@ body {
   letter-spacing: 0.02em;
   text-align: center;
   list-style-type: none;
+  margin: 0 0 48px 0;
 }
 
 .button-order {
+  display: block;
+  margin: auto;
   font-family: 'Roboto', sans-serif;
   color: white;
   background-color: rgba(77, 90, 229, 1);
@@ -117,6 +154,9 @@ body {
   line-height: 1.5;
   letter-spacing: 0.04em;
   text-align: center;
+  border: none;
+  border-radius: 4px;
+  padding: 16px 32px;
   cursor: pointer;
 }
 
@@ -127,14 +167,30 @@ body {
 
 /* advantages */
 
+.advantages {
+  padding-top: 120px;
+  padding-bottom: 120px;
+}
+
 .advantages-list {
+  display: flex;
+  justify-content: space-between;
   list-style-type: none;
+  margin: 0 156px;
+}
+
+.advantages-items {
+  width: calc((100% - 72px) / 4);
+  margin: 0;
+  padding-left: 0;
 }
 
 /* team-section */
 
 .team-section {
   background-color: rgba(244, 244, 253, 1);
+  padding-top: 120px;
+  padding-bottom: 120px;
 }
 
 .team-cards {
@@ -150,6 +206,8 @@ body {
 
 .portfolio-section {
   background-color: white;
+  padding-top: 120px;
+  padding-bottom: 120px;
 }
 
 .portfolio-cards {
