--- a/css/styles.css
+++ b/css/styles.css
@@ -27,6 +27,8 @@ body {
   letter-spacing: 0.02em;
   text-transform: capitalize;
   text-align: center;
+  margin-top: 0;
+  margin-bottom: 72px;
 }
 
 .second-title {
@@ -35,6 +37,7 @@ body {
   font-weight: 500;
   line-height: 1.2;
   letter-spacing: 0.02em;
+  margin: 0;
 }
 
 .main-text {
@@ -43,6 +46,15 @@ body {
   line-height: 1.5;
   letter-spacing: 0.02em;
   font-weight: 400;
+  margin: 0;
+}
+
+.text-section {
+  display: flex;
+  flex-direction: column;
+  gap: 8px;
+  padding: 0;
+  margin: 32px 16px;
 }
 
 /* header */
@@ -51,8 +63,7 @@ body {
   display: flex;
   justify-content: space-between;
   padding: 0;
-  margin-top: 24px;
-  margin-bottom: 24px;
+  margin: auto;
 }
 
 .nav-list {
@@ -167,7 +178,7 @@ body {
 
 /* advantages */
 
-.advantages {
+.advantages-section {
   padding-top: 120px;
   padding-bottom: 120px;
 }
@@ -176,7 +187,8 @@ body {
   display: flex;
   justify-content: space-between;
   list-style-type: none;
-  margin: 0 156px;
+  margin: 0;
+  padding: 0;
 }
 
 .advantages-items {
@@ -194,12 +206,21 @@ body {
 }
 
 .team-cards {
+  display: flex;
+  justify-content: space-between;
   list-style-type: none;
+  padding: 0;
 }
 
 .team-card {
-  background-color: white;
+  background-color: rgba(255, 255, 255, 1);
   text-align: center;
+  width: calc((100% - 72px) / 4);
+  border-bottom-right-radius: 4px;
+  border-bottom-left-radius: 4px;
+  box-shadow: 0px 2px 1px 0px rgba(46, 47, 66, 0.08),
+    0px 1px 1px 0px rgba(46, 47, 66, 0.16),
+    0px 1px 6px 0px rgba(46, 47, 66, 0.08);
 }
 
 /* portfolio-section */
@@ -211,11 +232,19 @@ body {
 }
 
 .portfolio-cards {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-between;
   list-style-type: none;
+  padding: 0;
 }
 
 .portfolio-card {
+  box-sizing: border-box;
   color: rgba(244, 244, 253, 1);
+  width: calc((100% - 48px) / 3);
+  border: solid 1px rgba(231, 233, 252, 1);
+  margin-bottom: 48px;
 }
 
 /* footer */
@@ -240,8 +269,11 @@ body {
   color: rgba(244, 244, 253, 1);
   line-height: 1.5;
   letter-spacing: 0.02em;
+  margin: 0;
+  padding-top: 16px;
 }
 
 .footer-section {
   background-color: rgba(46, 47, 66, 1);
+  padding: 100px 156px;
 }
