--- a/css/styles.css
+++ b/css/styles.css
@@ -81,7 +81,6 @@ img {
 .nav-list {
   display: flex;
   align-items: center;
-  padding: 24px 0 24px;
 }
 
 .logo {
@@ -94,6 +93,7 @@ img {
   text-decoration: none;
   text-transform: uppercase;
   margin-right: 76px;
+  padding: 24px 0 24px;
 }
 
 .brand-logo {
@@ -272,6 +272,7 @@ img {
   color: rgba(244, 244, 253, 1);
   width: calc((100% - 48px) / 3);
   border: solid 1px rgba(231, 233, 252, 1);
+  border-top: none;
 }
 
 .portfolio-text {
@@ -308,9 +309,5 @@ img {
 
 .footer-section {
   background-color: rgba(46, 47, 66, 1);
-}
-
-.footer-info {
-  display: inline-block;
   padding: 100px 0 100px;
 }
