--- a/css/styles.css
+++ b/css/styles.css
@@ -93,7 +93,6 @@ img {
   text-decoration: none;
   text-transform: uppercase;
   margin-right: 76px;
-  padding: 24px 0 24px;
 }
 
 .brand-logo {
@@ -105,6 +104,7 @@ img {
   gap: 40px;
   list-style-type: none;
   margin: 0;
+  padding: 24px 0;
 }
 
 .header-link {
@@ -272,17 +272,18 @@ img {
   color: rgba(244, 244, 253, 1);
   width: calc((100% - 48px) / 3);
   border: solid 1px rgba(231, 233, 252, 1);
-  border-top: none;
 }
 
 .portfolio-text {
   border: 1px solid #e7e9fc;
+  border-top: none;
   padding: 32px 16px;
 }
 
 /* footer */
 
 .logo-footer {
+  display: inline-block;
   font-family: 'Raleway', sans-serif;
   color: rgba(77, 90, 229, 1);
   font-size: 18px;
@@ -304,7 +305,6 @@ img {
   line-height: 1.5;
   letter-spacing: 0.02em;
   margin: 0;
-  padding-top: 16px;
 }
 
 .footer-section {
